--- a/p8105_hw6_problem2.Rmd
+++ b/p8105_hw6_problem2.Rmd
@@ -55,3 +55,6 @@ renderPlotly({
 })
 
 ```
+This plot was created using the NYNOAA dataset. For more information on how these plots were created, please click here.
+```{r}
+```
