--- a/p8105_hw6_problem2.Rmd
+++ b/p8105_hw6_problem2.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Untitled"
+title: "NY NOAA Analysis"
 output: 
   flexdashboard::flex_dashboard:
-    orientation: row
+    vertical_layout: scroll
 runtime: shiny
 ---
 
@@ -34,6 +34,8 @@ ny_noaa_plot_1 = ny_noaa %>%
   ungroup()
 
 
+
+#PLOT 1
 which_year = ny_noaa_plot_1 %>% distinct(year) %>% pull()
 
 
@@ -49,10 +51,9 @@ renderPlotly({
           color = ~prcp) %>%
     layout(title = "Precipitation Trend Through the Year")
 })
+
 ```
 
-Row {.tabset .tabset-fade}
------------------------------------------------------------------------
 
 ### Chart B
 
@@ -79,7 +80,7 @@ renderPlotly({
     filter(year %in% input$year_range[1]:input$year_range[2]) %>%
     plot_ly(x = ~month, y = ~tmax, type = "scatter",
           alpha = 0.0001,
-          color = ~tmax) %>%
+          color = ~year) %>%
     layout(title = "Maximum Temperature Through the Year")
 })
 ```
